# graph-forge

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  EVOLUTION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
domains/: science.yaml  social.yaml  technology.yaml
examples/: 01_technology_graph.py  02_text_extraction.py  03_async_parallel_enrichment.py
graphforge/: __init__.py  async_builder.py  builder.py  domains.py  enricher.py  extractor.py  models.py
tests/: conftest.py  test_builder.py  test_builder_extended.py  test_domains.py  test_domains_extended.py  test_enricher.py  test_enricher_extended.py  test_error_hardening.py  test_extractor.py  test_extractor_extended.py  test_models.py  test_models_extended.py  test_performance.py  test_property_based.py  test_security.py
