[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphforge"
version = "0.1.0"
description = "Knowledge graph builder with extractor, builder, and enricher components"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.3",
    "numpy>=2.4.3",
    "pyyaml>=6.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]
