[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphforge"
version = "0.1.0"
description = "Knowledge graph builder with extractor, builder, and enricher components"
authors = [{ name = "TechKnowMad Labs", email = "admin@techknowmad.ai" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["knowledge-graph", "graph", "nlp", "networkx", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.3",
    "numpy>=2.4.3",
    "pyyaml>=6.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]
